glx/testdata/invalid/broken-references/persons/person-mary-brown.glx
persons:
  person-mary-brown-1852:
    properties:
      name:
        value: "Mary Smith"
        fields:
          given: "Mary"
          surname: "Smith"
      gender: "female"
    notes: "Wife of John Smith. Dressmaker by trade."
    tags:
      - "ancestor"
      - "brown-family"
